# buc_Capstone_DEMO

./: CTP_REQUIREMENTS.md  PROJECT_HANDOVER_KR.md  README.md  WIREFRAME_PLAYBOOK.md  package-lock.json  test_prisma_schema.ts
.claude/: settings.local.json
.good-partner/: AGENTS.md  config.json  kanban.md  team.yaml
ai-interview/: AI_INTERVIEW_BACKEND_GUIDE.md  AI_INTERVIEW_BACKEND_PLAN.md  AI_INTERVIEW_FRONTEND_PLAN.md
crawler/: .env.example  .gitignore  README.md  Supabase_Setup.sql  list_models.py  pyproject.toml  run_dev_event_test.py  run_saramin_test.py
crawler/docs/: migration-map.md  refactoring-plan.md
crawler/scripts/: reset_db.py  saramin_standalone.py
crawler/src/: cli_jd.py  patch_data.py
crawler/src/apps/dev_event/: cli.py  fetcher.py  models.py  parser.py  processor.py  repository.py  service.py
crawler/src/apps/job_post/: cli.py  service.py
crawler/src/apps/saramin/: cli.py  crawler.py  models.py  processor.py  repository.py  service.py
crawler/src/apps/tech_blog/: cli.py  crawler.py  repository.py
crawler/src/common/: __init__.py
crawler/src/common/config/: __init__.py  settings.py
crawler/src/common/storage/: __init__.py  json_repo.py  supabase_repo.py
crawler/src/core/: config.py
crawler/src/shared/: config.py  database.py  job_models.py  tagger.py
ctp_docs/: README.md  decisions.md  handover.md  overview.md  progress-tasks.md  risks.md
docs/: HACKATHON_WORKSPACE_PLAN.md  WORKSPACE_PLAN.md  requirements_specification.md
web/: .env.example  .gitignore  ERROR_REPORT.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  (+9 more)
(+558 files in other folders)
